[feat]健康测评答题页面联调

--- a/wechat/src/main/webapp/xcview/html/shop/healthy-answer.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-answer.html
@@ -38,7 +38,7 @@
 			<div class="answer-bg"></div>
 			<!--问题开始-->	
 			<p class="question-list" data-id="1" data-no="1"></p>
-			<div class="select-option select1">
+			<div class="select-option select1" style="display: none">
 				<button class="select-answer select-answer1" type="button" data-answer="A" data-score="0">没有</button>
 				<button class="select-answer select-answer2" type="button" data-answer="B" data-score="1">偶尔</button>
 				<button class="select-answer select-answer3" type="button" data-answer="C" data-score="2">经常</button>
