--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -58,13 +58,13 @@
 					<ul class="sex-ul z">
 						<li>
 							<p class="comment-p select-man z">
-								<img src="/xcview/images/sex-select.png" data-sex="1"/>
+								<img src="/xcview/images/sex-select.png" class="sex" data-sex="1"/>
 							</p>
 							<span class="z">男</span>
 						</li>
 						<li>
 							<p class="comment-p select-woman z">
-								<img src="/xcview/images/sex-select.png" data-sex="0"/>
+								<img src="/xcview/images/sex-select.png" class="sex" data-sex="0"/>
 							</p>
 							<span class="z">女</span>
 						</li>
