--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -33,7 +33,7 @@
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="location.href ='/xcview/html/shop/shop.html'">
+			<div class="return" onclick="location.href ='/xcview/html/shop/order_center.html'">
 				<img src="/xcview/images/backicon.png" alt="" class="">
 			</div>
 			<div class="title">订单详情</div>
