被顶掉修改去登录页面

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -582,7 +582,7 @@
 			        location.href = "/xcview/html/enter.html";  /*登录页面*/ 
 			    }else if (flag === USER_TOP){
 //			        location.href ='/xcview/html/shop/shopping_trolley.html'
-			        location.href = "/xcview/html/evpi.html";  /*完善信息页面*/  
+			        location.href = "/xcview/html/enter.html";  /*登录页面*/  
 			    }else{
 //			        location.href ='/xcview/html/shop/shopping_trolley.html'
 			        $('.shopping_trolley').show();  
@@ -616,7 +616,7 @@
 			        location.href = "/xcview/html/enter.html";  /*登录页面*/ 
 			    }else if (flag === USER_TOP){
 //			        location.href ='/xcview/html/shop/shopping_trolley.html'
-			        location.href = "/xcview/html/evpi.html";  /*完善信息页面*/  
+			        location.href = "/xcview/html/enter.html";  /*登录页面*/  
 			    }else{
 //			        location.href ='/xcview/html/shop/shopping_trolley.html'
 			         $('.shopping_trolley').show();  
