--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -86,6 +86,9 @@
 		background: url(/xcview/images/defaults.png) no-repeat;
 		background-size: 100% 100%;
 	}
+	.shopping_trolley{
+		display: none;
+	}
 </style>
 </head>
 <body>
