--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -106,7 +106,7 @@
 					<div class="list">
 						<div class="referrer">
 							<img src="{{item.user.headPhoto}}" alt="" class="head_portrait" />
-							<div class="name">{{item.user.username}}医师</div>
+							<div class="name">{{item.user.username}}</div>
 							<div class="both"></div>
 						</div>
 						<div class="particulars">
