[feat]健康测评答题页面联调

--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -32,7 +32,7 @@
 						<p>健康测评</p>
 					</div>
 					<div class="arror_return z">
-						<img src="/xcview/images/back icon.png" alt="返回">
+						<img src="/xcview/images/back icon.png" onclick="javascript:location.href='/xcview/html/home_page.html" alt="返回">
 					</div>
 					<div class="header_news">
 						<img src="/xcview/images/share_img.png" alt="分享">
