--- a/wechat/src/main/webapp/xcview/html/shop/healthy-answer.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-answer.html
@@ -28,7 +28,7 @@
 						<p>健康测评</p>
 					</div>
 					<div class="arror_return z">
-						<img src="/xcview/images/back icon.png" alt="返回">
+						<img src="/xcview/images/back icon.png" onclick="javascript:location.href='./healthy-home.html'" alt="返回">
 					</div>
 					<div class="header_news">
 						<img src="/xcview/images/share_img.png" alt="分享">
@@ -64,12 +64,7 @@
 			</div>
 		</div>
 		
-		
-		
-		
-		
-		
-		
+
 		
 			<script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
