商品详情--全部评价位置修改。。地址管理返回代码，和确认订单  返回冲突--处理中

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -700,6 +700,7 @@
 				<!-- 商品-->
 				<div class="article_hide" data-id="{{item.productId}}" data-status="{{item.articleStatus}}"  style="margin-top: 0;">
 					<div class="nature_made">
+						<!--<img src="" alt="" style="width: .8rem; height: .8rem;" />-->
 						医师推荐
 						{{if item.level == 1}}
 						<img src="/xcview/images/xing1_0.png" alt="" class="xingxing" />
