--- a/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
@@ -117,7 +117,7 @@
 			var img=$(".img");
 			var callBack=function(album,img,save){
 				album.forEach(function(val,idx){ 
-					var div=$('<li><p><img src="/xcview/images/select_close.png" style="width:0.3rem;"></p></li>');
+					var div=$('<li><p><img src="/xcview/images/select_close.png" style="width:0.3rem;height:0.3rem"></p></li>');
 					var img=$("<img class='imgvoucher' />");
 					img.attr("src",val);
 					div.append(img);
