地址管理新增地址修改--返回

--- a/wechat/src/main/webapp/xcview/html/address.html
+++ b/wechat/src/main/webapp/xcview/html/address.html
@@ -179,7 +179,8 @@
         <div class="both"></div>
         <div  id="address_list">
         </div>
-        <div class="site_newly" onclick="location.href ='edit_address.html'">
+        <!--<div class="site_newly" onclick="location.href ='edit_address.html'">-->
+        <div class="site_newly">
           <div class="site_newly_cen">
             <div class="site_newly_img"><img src="/xcview/images/dingwei.png" /></div>
             <span>新增地址</span>
