地址管理  js提交。。购物车--安卓 区别

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -40,6 +40,7 @@
             height: 100%;
             margin: 0 auto;
             display: none;
+            padding-bottom: 1rem;
         }
         .shop-info .shop-info-text .shop-arithmetic{
         	width: 1.7rem;
@@ -273,7 +274,7 @@
                 <div class="price"></div>
                 <div class="repertory"></div><!--  -->
                 <div class="category">
-                    <span class="choice">选择</span>
+                    <span class="choice">选择11</span>
                     {{ each specificationItemvs as specificationItem i}}
                     <span class="specification spec-index-{{i}}">{{specificationItem.name}}</span>
                     {{/each}}
