购物车--点击选择按钮位置定位。。评价添加数量。。支付成功页面，添加控制物理返回键。修改市场价小数。。订单--医师推荐

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -79,6 +79,16 @@
 		    text-align: right;
 		    padding-right: .26rem;
 		}
+		.shop-info .shop-info-text .shop-price{
+			position: absolute !important;
+		    right: 0;
+		    width: 4.32rem;
+		    margin-right: .26rem;
+		    bottom: 0.17rem;
+		}
+		.shop-info .shop-info-text .shop-arithmetic{
+			right: 0 !important;
+		}
     </style>
 </head>
 <script type="text/javascript">
@@ -227,7 +237,8 @@
                 
                 <h4>
                     <img src="{{item.logo}}" alt="" class="head_portrait"/>
-                    <a href="#" class="shop-names">{{item.name}}</a>
+                    <!--<a href="#" class="shop-names">{{item.name}}</a>-->
+                    <a href="#" class="shop-names"></a>
                 </h4>
                 <!-- <div class="coupons"><span>领券</span><em>|</em><span>编辑</span></div> -->
             </div>
