--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -243,7 +243,11 @@
 				<div class="both"></div>
 			</div>
 			<script type="text/html" id="evaluate_main">
-			
+			<div class="evaluate_top" onclick="evaluation()">
+				<span class="title">评价({{items.user.number}})</span>
+				<span class="evaluate_view_all">查看全部 <img src="/xcview/images/shop/view_all.png" alt="" /></span>
+				<div class="both"></div>
+			</div>
 
 			<div class="appraiser">
 				<div class="appraiser_message">
