--- a/wechat/src/main/webapp/xcview/html/shop/payment_success.html
+++ b/wechat/src/main/webapp/xcview/html/shop/payment_success.html
@@ -110,4 +110,25 @@
     
 </script>
 
+<script> 
+// 控制手机物理键--返回
+window.onload = function(){
+  if(window.history && window.history.pushState) {  
+      $(window).on('popstate', function() {  
+          var hashLocation = location.hash;  
+          var hashSplit = hashLocation.split("#!/");  
+          var hashName = hashSplit[1];  
+          if(hashName !== '') {  
+              var hash = window.location.hash;  
+              if(hash === '') {  
+//                alert("你点击了返回键");  
+                  location.href ='/xcview/html/shop/order_center.html'  /*跳转链接*/
+              }  
+          }  
+      });  
+      window.history.pushState('forward', null, './payment_success.html');    //引号里写当前页面地址,刷新当前页'./inherited_introduction.html'
+  }
+};
+</script> 
+
 </html>
