全部评价-医师推荐--点击  购物车--跳转--安卓跳转

--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -157,7 +157,8 @@
 				<img src="/xcview/images/shop/service.png" alt="">
 				客服
 			</div>
-			<div class="shopping_cart" onclick="location.href ='/xcview/html/shop/shopping_trolley.html '">
+			<!--<div class="shopping_cart" onclick="location.href ='/xcview/html/shop/shopping_trolley.html '">-->
+			<div class="shopping_cart">
 				<img src="/xcview/images/shop/shopping_cart.png" alt="">
 				购物车
 				<span class="shopping_quantity">0</span>
