--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -95,20 +95,6 @@
 	window.onload = function(){
 		$(".header .return").click(function(){
 			history.back();   //可以就是没有刷新数据
-//			alert(111);
-//			location.replace(document.referrer);
-			// window.location.reload("/xcview/html/physician/physicians_page.html?doctor="+doctorId);
-			// window.location.reload(1);
-			// window.history.go(-1)
-			// window.history.go(-1);location.reload()
-			// window.history.go(-2); 
-			//window.location.href="/xcview/html/physician/physicians_page.html?doctor="+doctorId; 
-			// self.location=document.referrer;
-			// window.location.replace(document.referrer)
-		});
-		// 点击关闭按钮
-		$('.close').click(function(){
-			$('.shopping_trolley').hide();
 		});
 	};
 </script>
@@ -299,7 +285,7 @@
                 <div class="price"></div>
                 <div class="repertory"></div><!--  -->
                 <div class="category">
-                    <span class="choice">选择11</span>
+                    <span class="choice">选择</span>
                     {{ each specificationItemvs as specificationItem i}}
                     <span class="specification spec-index-{{i}}">{{specificationItem.name}}</span>
                     {{/each}}
