--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -307,105 +307,5 @@
 <script src="/xcview/js/common/iscroll-zoom.js"></script>
 <script src="/xcview/js/common/hammer.js"></script>
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
-<script type="text/javascript" src="/xcview/js/address.js"></script>  
+<script type="text/javascript" src="/xcview/js/edit_address.js"></script>  
 </html>
-
-
-<!--<script src="/xcview/js/common/js.js"></script>-->
-
-<script>
-/* 选择省市区插件    -- 初始化新增地址这个地方啦 */
-var PickerId;
-function picker2() {
-    //var nowValue = document.getElementById('nowValue');
-    new Picker({
-        "title": '请选择',//标题(可选)
-        "defaultValue": "北京市 北京市 东城区",//默认值-多个以空格分开（可选）
-        "type": 3,//需要联动级数[1、2、3]（可选）
-        "data": mucityData,//数据(必传)
-        "keys": {
-            "id": "value",
-            "value": "text",
-            "childData": "children"//最多3级联动
-        },//数组内的键名称(必传，id、text、data)
-        "callBack": function (val,b) {
-            //回调函数（val为选择的值）
-			$("#cityP").html(val);
-			PickerId=b.split(",")[2]
-        }
-    });
-};
-
-$("#address_save").click(function(){
-	$("#vanishs").hide();
-})
-
-//新的省市区
-	var getProviceId="";
-	var getCityId="";
-	var getQuId="";
-	var urlProvice="/xczh/shop/area?parentId="+getProviceId;
-//	省
-	requestService(urlProvice,null, function(data) {
-		var str;
-		var provice=data.resultObject;
-			for(var i=0; i<provice.length;i++){
-				str+="<option data-id="+provice[i].value+">"+provice[i].name+"</option>";
-			}
-		$(".input-group .sheng").html('<option data-id="0">请选择</option>'+str);
-		$(".input-group .shi").addClass("hide");
-		$(".input-group .qu").addClass("hide");
-	})
-//	省变化时
-	$(".input-group .sheng").on("change",function(){
-		 	getProviceId=$(".input-group .sheng option:selected").attr("data-id");			
-//	省市变化时,清空市和区的id,并隐藏区
-			$(".input-group .qu").addClass("hide");
-			getCityId="";
-			getQuId="";	
-//	如果省的value不为请选择时
-		if(getProviceId != 0){
-			$(".input-group .shi").removeClass("hide");
-			requestService("/xczh/shop/area?parentId="+getProviceId,null, function(data) {
-				var str;
-				var city=data.resultObject;
-				for(var i=0; i<city.length;i++){
-					str+="<option data-id="+city[i].value+">"+city[i].name+"</option>";
-				}
-				$(".input-group .shi").html('<option data-id="0">请选择</option>'+str);
-			})
-		}else{
-			$(".input-group .shi").addClass("hide");
-		}
-	})
-//	市变化时
-	$(".input-group .shi").on("change",function(){
-		 	getCityId=$(".input-group .shi option:selected").attr("data-id");	
-//		市发生改变时都让他为空
-		 	getQuId="";
-			requestService("/xczh/shop/area?parentId="+getCityId,null, function(data) {
-				var str;
-				var qu=data.resultObject;
-				if (qu.length == 0 || getCityId==0) {
-					$(".input-group .qu").addClass("hide");
-					getQuId="";
-				} else{
-					$(".input-group .qu").removeClass("hide");
-					for(var i=0; i<qu.length;i++){
-						str+="<option data-id="+qu[i].value+">"+qu[i].name+"</option>";
-					}
-						$(".input-group .qu").html('<option data-id="0">请选择</option>'+str);
-				}
-
-			})
-	})
-//	区变化时
-	$(".input-group .qu").on("change",function(){
-		getQuId=$(".input-group .qu option:selected").attr("data-id");
-		if(getQuId == 0){
-			getQuId="";
-		}
-
-	})
-
-</script>
