--- a/wechat/src/main/webapp/xcview/html/shop/expired_products.html
+++ b/wechat/src/main/webapp/xcview/html/shop/expired_products.html
@@ -114,13 +114,13 @@
             <img src="/xcview/images/shop/newsbg.png" alt=""/>
             <span class="advices_number"></span>
         </div>
+        <img src="/xcview/images/share_img.png" alt="" class="share share_class" />
     </div>
 </header>
 <div class="header_hidden_field"></div>
 <!-- 头部区域结束 -->
 
-
-<!-- 购物车空的状态开始 -->
+<!-- 空的状态开始 -->
 <div class="vacancy-main" style="display: none;">
     <div class="vacancy">
         <img src="/xcview/images/soldout.png" alt=""/>
@@ -129,9 +129,14 @@
     <div class="main_center" id="shop_recommend_product_ul">
     </div>
 </div>
+<!-- 空的状态结束 -->
 
-<!-- 购物车空的状态结束 -->
-
+<!--点击分享提示开始-->
+<div class="weixin_ceng">
+	<div class="weixin_ceng_bg"></div>
+	<div class="weixin_img"><img src="/xcview/images/fenxiang1.png" data-bd-imgshare-binded="1"></div>
+</div>
+<!--点击分享提示结束-->
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
