判断首页点击购物车，跳转登录

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -248,7 +248,7 @@
 	<!-- 底部结束 -->
 	
 	<!--购物车-->
-	<div class="shopping_carts" onclick="location.href ='/xcview/html/shop/shopping_trolley.html'">
+	<div class="shopping_carts">
 		<img src="/xcview/images/shop/shopping_carts.png" />
 		<span></span>
 	</div>
