购物车。ui修改

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -202,7 +202,7 @@
             <div class="price">￥<span>{{product.price}}</span></div>
             {{ if product.doctor }}
             <div class="referrer">
-                <img src="{{product.doctor.avatar}}" alt="">{{product.doctor.name}}
+                <img src="{{product.doctor.avatar}}" alt="">{{product.doctor.name}}医师 推荐
             </div>
             {{/if }}
         </li>
