商品详情添加评论数。处理安卓底部多余区域

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -244,7 +244,7 @@
 			</div>
 			<script type="text/html" id="evaluate_main">
 			<div class="evaluate_top" onclick="evaluation()">
-				<span class="title">评价({{items.user.number}})</span>
+				<span class="title">评价(<span class="reviewvCount"></span>)</span>
 				<span class="evaluate_view_all">查看全部 <img src="/xcview/images/shop/view_all.png" alt="" /></span>
 				<div class="both"></div>
 			</div>
