--- a/wechat/src/main/webapp/xcview/html/shop/expired_products.html
+++ b/wechat/src/main/webapp/xcview/html/shop/expired_products.html
@@ -123,7 +123,7 @@
 <!-- 空的状态开始 -->
 <div class="vacancy-main" style="display: none;">
     <div class="vacancy">
-        <img src="/xcview/images/soldout.png" alt=""/>
+        <img src="/xcview/images/shop/overdue.png" alt=""/>
         <div class="vacancy-cen">商品过期不存在</div>
     </div>
     <div class="main_center" id="shop_recommend_product_ul">
