添加测评入口

--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -96,14 +96,14 @@
 				<div class="main" style="-webkit-overflow-scrolling1:touch;">
 					<div class="center">
 						<ul>
-							<!-- <li onclick="location.href ='/xcview/html/down_load.html'">
+							 <li class="onclick_healthy">
 								<div class="apprentice_main">
 									<div class="flat_patternmaking">
-										<img src="/xcview/images/anchor_entry.jpg" alt="" />
+										<img src="/xcview/images/healthy-test.png" alt="健康测评" />
 									</div>
-									<div class="main_title">主播招募，马上加入就分享平台前期红利</div>
+									<div class="main_title">健康测评—了解自己的体质，获得个性化调理方案</div>
 								</div>
-							</li> -->
+							</li> 
 							<li class="onclick_li">
 								<div class="apprentice_main">
 									<div class="flat_patternmaking">
