--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -224,7 +224,7 @@
                 <h4>
                     <img src="{{item.logo}}" alt="" class="head_portrait"/>
                     <!--<a href="#" class="shop-names">{{item.name}}</a>-->
-                    <a href="#" class="shop-names"></a>
+                    <a href="#" class="shop-names">{{item.name}}医师推荐</a>
                 </h4>
                 <!-- <div class="coupons"><span>领券</span><em>|</em><span>编辑</span></div> -->
             </div>
