--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -6,9 +6,11 @@
 		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<link rel="stylesheet" href="/xcview/css/shop/shop-comment.css">
 		<!--提示-->
-		<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
+		<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">		
 		<link rel="stylesheet" href="/xcview/css/mui.min.css">
 		<link rel="stylesheet" href="/xcview/css/mui.picker.min.css">
+		<!--分享-->
+		<link rel="stylesheet" href="/xcview/css/share/share.css">
 		<link rel="stylesheet" href="/xcview/css/shop/healthy-home.css">
 		<style>
 			.disabled{
@@ -95,6 +97,48 @@
 			
 		</div>
 		
+		
+		<!--分享开始-->
+		<div class="share">
+			<div class="share_bg"></div>
+			<div class="share_main">
+				<div class="share_main_bg">
+					<ul>
+						<div class="share_to">分享到</div>
+						<li class="share_to_one" style="display: none;">
+							<div class="">
+								<img src="../images/ShareSDK.png">
+								<p>微信</p>
+							</div>
+						</li>
+						<li class="share_to_one" style="display: none;">
+							<div class="">
+								<img src="../images/Friends.png">
+								<p>朋友圈</p>
+							</div>
+						</li>
+						<li id="qqShare0">
+							<div class="" id="qqShare">
+								<img src="../images/Qzone_share.png">
+								<p>qq空间</p>
+							</div>
+						</li>
+						<li id="weiboShare">
+							<div class="" id="qqShare0">
+								<img src="../images/RSS_links.png">
+								<p>新浪微博</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="share_cancel">取消</div>
+			</div>
+		</div>
+		<div class="weixin_ceng" style="display: none;">
+			<div class="weixin_ceng_bg"></div>
+			<div class="weixin_img"><img src="/xcview/images/fenxiang1.png" data-bd-imgshare-binded="1"></div>
+		</div>
+		<!--分享结束-->
 		<script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 		<script type="text/javascript" src="/xcview/js/common/mui.picker.min.js"></script>
