地址管理--ios手机兼容返回回显问题

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -11,6 +11,9 @@
 	content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="" />
 <meta name="description" content="" />
+<meta http-equiv="Expires" CONTENT="0">
+<meta http-equiv="Cache-Control" CONTENT="no-cache">
+<meta http-equiv="Pragma" CONTENT="no-cache">
 
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
@@ -44,7 +47,7 @@
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="goHistory()">
+			<div class="return" onclick="goHistorys()">
 			<!--<div class="return" onclick="common_share_back()">-->
 			<!--<div class="return" onclick="returns()">-->
 				<img src="/xcview/images/backicon.png" alt="" class="">
