点击好货订单--跳转注册

--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -132,7 +132,7 @@
 		
 	</div>
 	<div class="information">
-		<div class="information_click" onclick="location.href ='/xcview/html/shop/order_center.html'">
+		<div class="information_click">
 			<div class="good_order">
 				<img src="/xcview/images/indent.png" alt="" />
 				好货订单
