增加商品下架后分享页面

--- a/wechat/src/main/webapp/xcview/html/shop/expired_products.html
+++ b/wechat/src/main/webapp/xcview/html/shop/expired_products.html
@@ -121,7 +121,7 @@
 <!-- 头部区域结束 -->
 
 <!-- 空的状态开始 -->
-<div class="vacancy-main" style="display: none;">
+<div class="vacancy-main" style="">
     <div class="vacancy">
         <img src="/xcview/images/shop/overdue.png" alt=""/>
         <div class="vacancy-cen">商品过期不存在</div>
@@ -139,11 +139,12 @@
 <!--点击分享提示结束-->
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.4.min.js"></script>
+<script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
-<script type="text/javascript" src="/xcview/js/shop/expired_products.js"></script>  
+<script type="text/javascript" src="/xcview/js/shop/expired_products.js"></script>
+<script type="text/javascript" src="/xcview/js/share/share.js"></script>
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
-
 
 <script type="text/html" id="shop_recommend_product_tmpl">
     <div class="hot_sale">猜你喜欢</div>
