--- a/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
@@ -145,25 +145,25 @@
 						<div class="share_to">分享到</div>
 						<li class="share_to_one" style="display: none;">
 							<div class="">
-								<img src="../images/ShareSDK.png">
+								<img src="/xcview/images/ShareSDK.png" />
 								<p>微信</p>
 							</div>
 						</li>
 						<li class="share_to_one" style="display: none;">
 							<div class="">
-								<img src="../images/Friends.png">
+								<img src="/xcview/images/Friends.png" />
 								<p>朋友圈</p>
 							</div>
 						</li>
-						<li id="qqShare0">
+						<li id="qqShare1">
 							<div class="" id="qqShare">
-								<img src="../images/Qzone_share.png">
+								<img src="/xcview/images/Qzone_share.png />
 								<p>qq空间</p>
 							</div>
 						</li>
 						<li id="weiboShare">
 							<div class="" id="qqShare0">
-								<img src="../images/RSS_links.png">
+								<img src="/xcview/images/RSS_links.png" />
 								<p>新浪微博</p>
 							</div>
 						</li>
@@ -184,7 +184,9 @@
 		<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 		<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
 		<script type="text/javascript" src="/xcview/js/common/template.js"></script> 
-		<script type="text/javascript" src="/xcview/js/shop/bootstrap.min.js"></script> 	
+		<script type="text/javascript" src="/xcview/js/shop/bootstrap.min.js"></script>
+		<script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+		<script type="text/JavaScript" src="/xcview/js/share/share.js"></script>
 		<!--提示-->
 		<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script> 
 		<script type="text/javascript" src="/xcview/js/shop/healthy-result.js"></script>
