--- a/online-web/src/main/webapp/web/html/anchors_preview.html
+++ b/online-web/src/main/webapp/web/html/anchors_preview.html
@@ -113,6 +113,10 @@
 					
 				</div>
 			</div>
+			<!--是否下架-->
+			<div class="lower-frame hide">
+				<p>商品已经下架啦~</p>
+			</div>
 			<!--底部购买-->
 			<div class="bottom">
 				<div class="slide-bottom">
