健康测评首页跳转

--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -34,7 +34,7 @@
 						<p>健康测评</p>
 					</div>
 					<div class="arror_return z">
-						<img src="/xcview/images/back icon.png" onclick="javascript:location.href='/xcview/html/home_page.html" alt="返回">
+						<img src="/xcview/images/back icon.png" onclick="javascript:location.href='./home_page.html'" alt="返回">
 					</div>
 					<div class="header_news">
 						<img src="/xcview/images/share_img.png" alt="分享">
@@ -77,7 +77,7 @@
 					<span class="left-tip z">出生日期</span>
 					<form class="mui-input-group" id="birth-date">
 						<div class="mui-input-row" id="liMONTH">
-							<input type='text' class="font mui-left" placeholder="请选择" id="datMONTH" readonly="true">
+							<input type="text' class="font mui-left" placeholder="请选择" id="datMONTH" readonly="true">
 						</div>
 					</form>
 				</div>
