发现--师承-ios返回bug

--- a/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
@@ -21,7 +21,8 @@
 			<!-- <div class="return" onclick="location.replace('/xcview/html/apprentice/inherited_introduction.html')"><img src="/xcview/images/back%20icon.png" alt="" /></div> -->
 			<!--  <div class="return" onclick="location.replace('inherited_introduction.html?merId=' + merId)"><img src="/xcview/images/back%20icon.png" alt="" /></div> 
 			<div class="return" onclick="history.back();"><img src="/xcview/images/back%20icon.png" alt="" /></div> -->
-			 <div class="return" onclick="window.history.back();"><img src="/xcview/images/back%20icon.png" alt="" /></div>
+			 <!--<div class="return" onclick="window.history.back();"><img src="/xcview/images/back%20icon.png" alt="" /></div>-->
+			 <div class="return"><img src="/xcview/images/back%20icon.png" alt="" /></div>
 			<div class="apply_title">报名信息</div>
 		</div>
 	</header>
