屏蔽，商品详情点击放大查看大图。。修改医师推荐隐藏分享

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -123,15 +123,16 @@
 				
 			    {{each items as item i}}
 			    <div class="swiper-slide">			
-					<a href="{{item.source}}" data-size="1024x1024">
-						<img src="{{item.source}}" alt="" class="surface_plot" />
-					</a>   	
+					<img src="{{item.source}}" alt="" class="surface_plot" />
 			    </div>
 			    {{/each}}
 			
 			</div>
 			<div class="swiper-pagination"></div>
-		</div>              			
+		</div>             
+		<!--<a href="{{item.source}}" data-size="1024x1024">
+			<img src="{{item.source}}" alt="" class="surface_plot" />
+		</a> 备份点击放大  -->
 
 		<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 		    <div class="pswp__bg"></div>
