--- a/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
@@ -46,91 +46,46 @@
 			
 			<div class="content-method result3" style="display: none">
 				<!--建议、饮食宜忌-->
-				<div class="suggest-wrap">
-					<div class="suggest-title">
-						<p>建议</p>
-					</div>
-					<div class="live-tip p1">
-						<p class="live-title">
-							<img src="/xcview/images/aixin.png" alt="标题图标" />
-							<span>生活注意</span>
-						</p>
-						<!--<p class="live-text-one">
-							保持注意力集中；保证充足的睡眠，早睡，尽量不超过晚上11点入睡；凡事宜量力而行，不可过度劳累；平时需要注意眼睛保养，不可过长时间注视电脑，适当注视下绿色的树等植物。
-						</p>
-						<p class="live-text-one">
-							保持良好的作息习惯，尽量避免熬夜；少吃辛辣或者刺激性食物；积极参加户外运动，放松心情；不要给自己太大的压力，学会合理减压。
-						</p>-->
-					</div>
-					<div class="live-tip p2">
-						<p class="live-title">
-							<img src="/xcview/images/aixin.png" alt="标题图标" />
-							<span>饮食宜忌</span>
-						</p>
-						<!--<p class="live-text-one">-->
-							<!--多食用补血补肝的食物，肝脏、羊肉、花生等，平时也要多食用桑葚、红枣、桂圆等水果。-->
-						<!--</p>-->
-						<!--<p class="live-text-one">-->
-							<!--适宜多吃清补、滋润、生津的食物，如银耳、梨子、鸭肉、桑葚、牛奶、西洋参等。忌食辛辣、油腻、生冷之物。-->
-						<!--</p>-->
-					</div>
-				</div>
-				
-				<!--食疗推荐-->
-				<div class="suggest-wrap p4">
-					<div class="suggest-title">
-						<p>食疗推荐</p>
-					</div>
-					<!--<div class="live-tip">
-						<p class="live-title">
-							<img src="/xcview/images/aixin.png" alt="标题图标" />
-							<span>当归生姜牛肉汤</span>
-						</p>
-						<p class="live-text-one">
-							<span class="live-left-tip">原料：</span>当归15克，黄芪25克，党参25克，羊肉500克，大枣5枚，葱、姜、料酒、味精各适量。
-						</p>
-						<p class="live-text-one">
-							<span class="live-left-tip">制法：</span>保持良好的作息习惯，尽量避免熬夜；少吃辛辣或者刺激性食物；积极参加户外运动，放松心情；不要给自己太大的压力，学会合理减压。
-						</p>
-					</div>
-					<div class="live-tip">
-						<p class="live-title">
-							<img src="/xcview/images/aixin.png" alt="标题图标" />
-							<span>韭菜木耳炒猪肝</span>
-						</p>
-						<p class="live-text-one">
-							<span class="live-left-tip">原料：</span>猪肝200克，水发木耳30克，韭菜30克，蒜、姜、料酒适量，其他调味料适量即可。
-						</p>
-						<p class="live-text-one">
-							<span class="live-left-tip">制法：</span>把猪肝用水浸泡20分钟洗净，切成薄片，放入料酒、水淀粉上浆；木耳去硬根，洗净切丝；韭菜择洗后切段。锅中油烧热，倒入猪肝迅速炒变色，盛盘备用；锅中放入蒜片、姜片炸锅，下入韭菜、木耳翻炒，再放入猪肝、生抽、盐、糖、胡椒粉翻炒片刻，加少许水，味精、香油炒匀出锅。
-						</p>
-					</div>-->
-				</div>
-				
-				<!--保健、穴位-->
-				<div class="suggest-wrap p3" style="margin-bottom: 0.6rem;">
-					<div class="suggest-title">
-						<p>保健穴位</p>
-					</div>
-					<!--<div class="live-tip">-->
-						<!--<p class="live-title">-->
-							<!--<img src="/xcview/images/aixin.png" alt="标题图标" />-->
-							<!--<span>足三里、血海</span>-->
-						<!--</p>-->
-						<!---->
+				<!--<div class="suggest-wrap">-->
+					<!--<div class="suggest-title">-->
+						<!--<p>建议</p>-->
 					<!--</div>-->
 					<!--<div class="live-tip">-->
 						<!--<p class="live-title">-->
 							<!--<img src="/xcview/images/aixin.png" alt="标题图标" />-->
-							<!--<span>足三里、承山</span>-->
+							<!--<span>生活注意</span>-->
+						<!--</p>-->
+						<!--<p class="live-text-one p1">-->
 						<!--</p>-->
 					<!--</div>-->
-				</div>
-			</div>
-			
-			
+					<!--<div class="live-tip">-->
+						<!--<p class="live-title">-->
+							<!--<img src="/xcview/images/aixin.png" alt="标题图标" />-->
+							<!--<span>饮食宜忌</span>-->
+						<!--</p>-->
+						<!--<p class="live-text-one p2">-->
+						<!--</p>-->
+					<!--</div>-->
+					<!--<div class="live-tip p3">-->
+						<!--<p class="live-title">-->
+							<!--<img src="/xcview/images/aixin.png" alt="标题图标" />-->
+							<!--<span>食疗推荐</span>-->
+						<!--</p>-->
+					<!--</div>-->
+					<!--<div class="live-tip">-->
+						<!--<p class="live-title">-->
+							<!--<img src="/xcview/images/aixin.png" alt="标题图标" />-->
+							<!--<span>保健穴位</span>-->
+						<!--</p>-->
+						<!--<span class="p4"></span>-->
+					<!--</div>-->
+				<!--</div>-->
 
-		
+			</div>
+
+
+
+
 		</div>
 		
 		
