--- a/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
@@ -83,7 +83,10 @@
 
 			</div>
 
-
+			<!--重新测试-->
+			<div class="reset-test">
+				<button type="button" class="start">重新测试</button>
+			</div>
 
 
 		</div>
