[feat]健康评测-重新测试

--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -26,7 +26,7 @@
 			document.documentElement.style.fontSize=kk/7.5+"px";
 		</script>
 	</head>
-	<body>
+	<body style="display: none">
 		<div class="wp">	
 			<div class="wrap-header">
 				<div class="header">	
