--- a/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
@@ -85,7 +85,7 @@
 
 			<!--重新测试-->
 			<div class="reset-test">
-				<button type="button" class="start">重新测试</button>
+				<button type="button" class="start restart">重新测试</button>
 			</div>
 
 
