测试全部评价点击大图。。确认订单添加需付款  span

--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -32,6 +32,9 @@
 <!--刷新 -->
 <link rel="stylesheet" href="/xcview/css/minirefresh/minirefresh.css">
 <script type="text/javascript" src="/xcview/js/minirefresh/minirefresh.js"></script>
+
+<!--点击查看大图引入-->
+
 <style>
 	body{
 		background:#f0f0f0;
@@ -244,4 +247,7 @@
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 <script type="text/javascript" src="/xcview/js/shop/jquery.spinner.js"></script><!-- 点击数量引入 -->
 <script type="text/javascript" src="/xcview/js/shop/common/commodity_details_bottom.js?version=21a43862ba"></script>
+
+<!--点击查看大图引入-->
+
 </html>
