--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -210,7 +210,7 @@
 			<div class="zongjia"></div>
 
 			<div class="express">
-				<div class="express_price">共{{item.quantity}}件商品&nbsp;&nbsp;&nbsp;&nbsp;需付款&nbsp;<span>￥{{item.amount}}</span></div>
+				<div class="express_price">共{{item.quantity}}件商品&nbsp;&nbsp;&nbsp;&nbsp;需付款&nbsp;<span>￥<span class="amount">{{item.amount}}</span></span></div>
 			</div>
 
 			<div class="payment_method">
